--- a/app/src/main/res/layout/activity_eyes_image.xml
+++ b/app/src/main/res/layout/activity_eyes_image.xml
@@ -58,14 +58,14 @@
 
     <ImageView
         android:id="@+id/choose"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="88dp"
+        android:layout_height="84dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="60dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_eyes"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.076"
         app:srcCompat="@drawable/ic_photo" />
 
     <Button
@@ -88,13 +88,26 @@
         android:id="@+id/camera"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/choose"
         app:layout_constraintEnd_toStartOf="@+id/choose"
-        app:layout_constraintHorizontal_bias="0.032"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/choose"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_camera" />
+
+    <ProgressBar
+        android:id="@+id/eyes_prog"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
+        app:layout_constraintEnd_toStartOf="@+id/choose"
+        app:layout_constraintStart_toEndOf="@+id/camera"
+        app:layout_constraintTop_toBottomOf="@+id/text_eyes"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
